# moth06

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  moth06.cc  moth06.hh  moth06_common.cc  moth06_common.hh  moth06_core.hh  moth06_core_files.cc  moth06_core_game.cc  moth06_fs.cc  moth06_gfx.cc  moth06_pbg.cc  moth06_sdl.cc  moth06_sdl.hh
devtools/: cloc.sh  text-to-utf8.py
docs/: data.md  fileformats.md  gamefiles.md
moth06/: moth06.cc  moth06.hh  moth06_gfx.cc
moth06_common/: moth06_common.hh
moth06_game/: moth06_game.cc  moth06_game.hh  moth06_game_files.cc
old/: moth06.hh  moth06_fs.cc  moth06_gfx.cc  moth06_hash.cc
patterns/: anm.hexpat
src/: game.cc  game.hh  game_private.hh  hk.cc  hk.hh  moth06.cc  moth06.hh  moth06_gfx.cc  moth06_test.cc  test.hh  test_hk.cc
src/old/moth06/: moth06.cc  moth06.hh  moth06_gfx.cc
src/old/moth06_common/: moth06_common.cc
src/old/moth06_game/: moth06_game.hh
src/old/tests/: common.cc  read_files.cc  tests.hh
tests/: common.cc  read_files.cc  tests.hh
